<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="umorili_url">http://umorili.herokuapp.com/</string>
    <string name="umorili_api_url">http://umorili.herokuapp.com/api/</string>

    <string name="app_name">umori.li</string>
    <string name="title_source_detail">...</string>
    <string name="random_label">Случайные</string>
    <string name="options_label">Настройки</string>
    <string name="theme_label">Тема</string>
    <string name="connection_error_text">Ошибка связи...</string>
    <string name="loading_text">Загрузка данных...</string>
    <string name="refresh_text">Обновить</string>
    <string name="interface_preferences">Интерфейс</string>
    <string name="system_preferences">Системные настройки</string>
    <string name="theme_list_preference">Тема</string>
    <string name="font_list_preference">Шрифт</string>
    <string name="full_screen_preference">Полноэкранный режим</string>
    <string name="full_screen_preference_summary">Читать в полноэкранном режиме</string>
    <string name="action_bar_share_with">Поделиться...</string>
    <string name="copy_text">Копировать</string>
    <string name="caching_text">Кэширование начато</string>
    <string name="caching_end_text">Кэширование закончено</string>
    <string name="caching_preference">Кэширование</string>
    <string name="caching_preference_summary">Кэширование всех источников</string>
    <string-array name="entries_themes_list">
        <item>Темная</item>
        <item>Светлая</item>
        <item>Светлая с темным меню</item>
    </string-array>
    <string-array name="entryvalues_themes_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="entries_font_list">
        <item>Маленький</item>
        <item>Нормальный</item>
        <item>Большой</item>
    </string-array>
    <string-array name="entryvalues_font_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
