<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/interface_preferences">


        <ListPreference
                android:key="theme_list_preference"
                android:title="@string/theme_list_preference"
                android:entries="@array/entries_themes_list"
                android:entryValues="@array/entryvalues_themes_list"
                android:defaultValue="0"
                android:dialogTitle="@string/theme_list_preference" />

        <ListPreference
                android:key="font_list_preference"
                android:title="@string/font_list_preference"
                android:entries="@array/entries_font_list"
                android:entryValues="@array/entryvalues_font_list"
                android:defaultValue="1"
                android:dialogTitle="@string/font_list_preference" />

        <CheckBoxPreference
            android:key="fullscreen_preference"
            android:title="@string/full_screen_preference"
            android:summary="@string/full_screen_preference_summary" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/system_preferences">

        <CheckBoxPreference
            android:key="cashing_preference"
            android:title="@string/caching_preference"
            android:summary="@string/caching_preference_summary" />

    </PreferenceCategory>


</PreferenceScreen>